testsuite/tests/indexed-types/should_fail/T14887.stderr

T14887.hs:15:1: error:
    • The kind of ‘Foo2’ is ill-scoped
        Inferred kind: Foo2 :: forall (a :: k). forall k -> (a :~: a) -> *
      NB: Specified variables (namely: (a :: k)) always come first
      Perhaps try this order instead: k (a :: k) (e :: a :~: a)
    • In the type family declaration for ‘Foo2’
